--- a/app/GeekShopping/.vscode/launch.json
+++ b/app/GeekShopping/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": ".NET Core Launch (web)",
+            "name": ".NET Core Launch (API)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
@@ -24,10 +24,6 @@
                 "/Views": "${workspaceFolder}/Views"
             }
         },
-        {
-            "name": ".NET Core Attach",
-            "type": "coreclr",
-            "request": "attach"
-        }
+
     ]
 }
